fix cloud overflow issue

--- a/src/index.less
+++ b/src/index.less
@@ -253,3 +253,11 @@ body:before {
 }
 #zp {color: white;}
 #nt { position: relative; left: -10px;}
+#sk {
+    overflow: hidden;
+    position: absolute;
+    top: 50px;
+    height: 100%;
+    width: 100%;
+    z-index: 1;
+}
